--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="js/scripts.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3"><span class="1-1"></span></div>
-        <div class="col-md-3"><span class="1-2"></span></div>
-        <div class="col-md-3"><span class="1-3"></span></div>
+<head>
+  <meta charset="utf-8">
+  <title>Tic-Tac-Toe</title>
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+  <script src="js/scripts.js" type="text/javascript"></script>
+</head>
+<body>
+  <div class="jumbotron">
+    <form class="form-control" id="player-1-name" action="index.html" method="post">
+      <input type="text" name="name" value="" placeholder="Player 1 Name">
+      <button type="submit" name="button"></button>
+    </form>
+
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 clickbox" value="one"id="one">
+          <span class="">lorem</span>
+        </div>
+        <div class="col-md-3 clickbox" value="two"id="two">
+          <span class="">lorem</span>
+        </div>
+        <div class="col-md-3 clickbox" value="three"id="three">
+          <span class="">lorem</span>
+        </div>
       </div>
       <div class="row">
-        <div class="col-md-3"><span class="2-1"></span></div>
-        <div class="col-md-3"><span class="2-2"></span></div>
-        <div class="col-md-3"><span class="2-3"></span></div>
+        <div class="col-md-3 clickbox" value="four"id="four">
+          <span class="">lorem</span>
+        </div>
+        <div class="col-md-3 clickbox" value="five"id="five">
+          <span class="">lorem</span>
+        </div>
+        <div class="col-md-3 clickbox" value="six"id="six">
+          <span class="">lorem</span>
+        </div>
       </div>
       <div class="row">
-        <div class="col-md-3"><span class="3-1"></span></div>
-        <div class="col-md-3"><span class="3-2"></span></div>
-        <div class="col-md-3"><span class="3-3"></span></div>
+        <div class="col-md-3 clickbox" value="seven"id="seven">
+          <span class="">lorem</span>
+        </div>
+        <div class="col-md-3 clickbox" value="eight"id="eight">
+          <span class="">lorem</span>
+        </div>
+        <div class="col-md-3 clickbox" value="nine"id="nine">
+          <span class="">lorem</span>
+        </div>
       </div>
     </div>
   </body>
-</html>
+  </html>
