add method to hide clicked divs by manipulating their z-index in css

--- a/index.html
+++ b/index.html
@@ -9,47 +9,41 @@
   <script src="js/scripts.js" type="text/javascript"></script>
 </head>
 <body>
-  <div class="jumbotron">
-    <form class="form-control" id="player-1-name" action="index.html" method="post">
-      <input type="text" name="name" value="" placeholder="Player 1 Name">
-      <button type="submit" name="button"></button>
-    </form>
-
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 clickbox" value="one"id="one">
-          <span class="">lorem</span>
-        </div>
-        <div class="col-md-3 clickbox" value="two"id="two">
-          <span class="">lorem</span>
-        </div>
-        <div class="col-md-3 clickbox" value="three"id="three">
-          <span class="">lorem</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3 clickbox" value="four"id="four">
-          <span class="">lorem</span>
-        </div>
-        <div class="col-md-3 clickbox" value="five"id="five">
-          <span class="">lorem</span>
-        </div>
-        <div class="col-md-3 clickbox" value="six"id="six">
-          <span class="">lorem</span>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3 clickbox" value="seven"id="seven">
-          <span class="">lorem</span>
-        </div>
-        <div class="col-md-3 clickbox" value="eight"id="eight">
-          <span class="">lorem</span>
-        </div>
-        <div class="col-md-3 clickbox" value="nine"id="nine">
-          <span class="">lorem</span>
-        </div>
-      </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3 clickbox" value="one"id="one">
+      <span class=""></span>
     </div>
-  </body>
-  </html>
+    <div class="col-md-3 clickbox" value="two"id="two">
+      <span class=""></span>
+    </div>
+    <div class="col-md-3 clickbox" value="three"id="three">
+      <span class=""></span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 clickbox" value="four"id="four">
+      <span class=""></span>
+    </div>
+    <div class="col-md-3 clickbox" value="five"id="five">
+      <span class=""></span>
+    </div>
+    <div class="col-md-3 clickbox" value="six"id="six">
+      <span class=""></span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 clickbox" value="seven"id="seven">
+      <span class=""></span>
+    </div>
+    <div class="col-md-3 clickbox" value="eight"id="eight">
+      <span class=""></span>
+    </div>
+    <div class="col-md-3 clickbox" value="nine"id="nine">
+      <span class=""></span>
+    </div>
+  </div>
+</div>
+</body>
+</html>
